--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-server.port=4321
-spring.datasource.url=jdbc:postgresql://localhost:5432/bank
+spring.datasource.url=jdbc:postgresql://database:5432/bank
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
